[project]
name = "resilient-requester"
version = "0.1.0"
description = "A simple HTTP requester with retry and proxy support"
authors = [
    { name="Chima Ihueze", email="chimaihueze@outlook.com" }
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fake-useragent>=2.2.0",
    "requests>=2.32.4",
]
